--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "event-management-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./src/server.js",
   "scripts": {
     "dev": "nodemon src/server.js --watch",
     "start": "node src/server.js"
