--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3",
+    "react-toastify": "^11.0.3",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
